<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ingreseNombre" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Juan Pablo"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ingreseApellido"/>

    <EditText
        android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Letteri"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ingreseDni"/>

    <EditText
        android:id="@+id/editDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="33.654.125"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sexo"
    android:layout_gravity="center"/>

<RadioGroup
    android:id="@+id/radioSexo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/radioHombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hombre"
        android:checked="true"/>

    <RadioButton
        android:id="@+id/radioMujer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mujer"/>

</RadioGroup>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/save"
        android:text="@string/guardar"/>

</LinearLayout>

</LinearLayout>